<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="calculate">HITUNG</string>
    <string name="result">Hasil</string>
    <string name="title_activity_view_group">ViewGroup</string>

    <!-- Profile Umpo  -->
    <string name="umpo_deskripsi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, ut!</string>

    <string name="umpo_vision_title">Visi</string>
    <string name="umpo_vision">Menjadi universitas yang unggul dalam penguasaan ilmu pengetahuan, teknologi, dan seni berdasarkan nilai-nilai Islami.</string>

    <string name="umpo_mission_title">Misi</string>
    <string name="umpo_mission">
        1. Menyelenggarakan pendidikan akademik, profesi, dan vokasi yang berkualitas berdasarkan nilai-nilai Islam;\n
        2. Menyelenggarakan penelitian dan pengabdian kepada masyarakat yang berkualitas berdasarkan nilai-nilai Islam;\n
        3. Menyelenggarakan pengelolaan institusi yang amanah dan bertumpu pada sistem penjaminan mutu;\n
        4. Menyelenggarakan pembinaan dan pengembangan sivitas akademika dalam kehidupan yang Islami;\n
        5. Menyelenggarakan kerjasama dengan pihak lain yang saling menguntungkan dan dapat dipertanggungjawabkan.
    </string>

    <string name="umpo_goal_title">Tujuan</string>
    <string name="umpo_goal">
        1. Menghasilkan lulusan yang memiliki kemampuan akademik, profesi, dan vokasi yang unggul dalam bidang ipteks berdasarkan nilai-nilai Islam;\n
        2. Menghasilkan lulusan yang berdaya saing nasional dalam bidang ipteks berdasarkan nilai-nilai Islam;\n
        3. Menghasilkan karya penelitian yang berkualitas dalam bidang ipteks berdasarkan nilai-nilai Islam;\n
        4. Menghasilkan karya pengabdian kepada masyarakat yang berkualitas dalam bidang ipteks berdasarkan nilai-nilai Islam;\n
        5. Mewujudkan tata kelola institusi yang amanah dan bertumpu pada sistem penjaminan mutu;\n
        6. Mewujudkan kultur kehidupan Islami pada seluruh sivitas akademika;\n
        7. Menghasilkan kerjasama dan jaringan kerja dengan pihak lain yang saling menguntungkan dan dapat dipertanggungjawabkan.
    </string>


</resources>